[package]
name = "ctp_query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
tracing-subscriber = "0.3.18"
tokio = { version = "1", features = ["full"] }
base = { path = "../base" }
ctp_futures = { path = "../ctp_futures" }
spider = { path = "../spider" }
futures = "0.3.5"
bincode = { version = "2.0.0-rc.2", features = ["derive"] }
chrono = "0.4"
clap = { version = "3.2.6", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["json"] }
redis = { version = "0.26.1", features = ["aio", "tokio-comp"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "ctp_query"
path = "ctp_query.rs"

[[example]]
name = "ctp_trade"
path = "ctp_trade.rs"

[[example]]
name = "spider"
path = "spider.rs"

[[example]]
name = "ctp_md"
path = "ctp_md.rs"

[[example]]
name = "arbitrage_strategies"
path = "arbitrage_strategies.rs"

[[example]]
name = "redis"
path = "redis.rs"